--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,16 @@ dependencies:
   provider: ^6.0.2
   sqflite: ^2.0.2+1
   path: ^1.8.0
+  sqfentity: ^2.2.0+5
+  sqfentity_gen: ^2.2.0+10
+  http: ^0.13.4
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.10
+  build_verify: ^3.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
